--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -20,7 +20,7 @@ $font-family-sans-serif: 'Poppins', serif;
 }
 
 .custombg{
-    background: black url('../assets/0.jpg');
+    background: black url('../assets/banner.png');
     background-size: cover;
 
 }
